--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
 
    <!-- home
    ================================================== -->
-   <section id="home">
+   <!-- <section id="home" data-parallax="scroll" data-image-src="images/camion.png" data-natural-width=3000 data-natural-height=2000> -->
+   <section id="home" >
         <div class="home-content">
 
             <div class="row contents">
@@ -90,8 +91,7 @@
                 </div>
 
                 <div class="home-image-right">
-                    <img src="images/iphone-app-470.png"
-                        srcset="images/iphone-app-470.png 1x, images/iphone-app-940.png 2x"
+                    <img src="images/phone-initial.png"
                         data-aos="fade-up">
                 </div>
             </div>
@@ -127,33 +127,31 @@
     <!-- about
     ================================================== -->
     <section id="about">
-
         <div class="row about-intro">
-
             <div class="col-four">
                 <h1 class="intro-header" data-aos="fade-up">Acerca de la aplicación</h1>
             </div>
+
             <div class="col-eight">
                 <p class="lead" data-aos="fade-up">
-                    Tenemos como objetivo brindarle a los habitantes de La Matanza una aplicación con la que puedan reportar los incidentes de forma rápida y fácil, además de mantenerlos informados con las ultimas noticias acerca de los bomberos, ofrecerle documentos con información útil y darles la posibilidad de brindarles un aporte a los Bomberos Voluntarios de La Matanza.
+                    Ponemos en las manos de la comunidad de La Matanza una aplicación con la que puedan reportar los incidentes de forma rápida y sencilla, además de mantenerlos informados con las ultimas noticias acerca de los bomberos, ofrecerle documentos con información sobre como prevenir y actuar ante accidentes.
                 </p>
             </div>
-
         </div>
 
         <div class="row about-features">
 
-            <div class="features-list block-1-3 block-m-1-2 block-mob-full group">
+            <div class="features-list block-1-2 block-m-1-2 block-mob-full group">
 
                 <div class="bgrid feature" data-aos="fade-up">
 
-                    <span class="icon"><i class="icon-window"></i></span>
+                    <span class="icon"><i class="fa fa-mobile-phone"></i></span>
 
                     <div class="service-content">
 
-                        <h3>Fully Resposive</h3>
+                        <h3>Reportá tu emergencia</h3>
 
-                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
+                        <p>Ahora, con la aplicación de los Bomberos Voluntarios de Matanza podrás reportar tu emergencia de forma rápida y sencilla siguiendo unos pocos pasos los cuales le proporcionaran a los bomberos la información necesaria para poder actuar ante la emergencia
                         </p>
 
                     </div>
@@ -165,7 +163,7 @@
                         <span class="icon"><i class="icon-image"></i></span>
 
                     <div class="service-content">
-                        <h3>Retina Ready</h3>
+                        <h3>Mirá las ultimas noticias</h3>
 
                         <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
                         </p>
@@ -180,7 +178,7 @@
                     <span class="icon"><i class="icon-paint-brush"></i></span>
 
                     <div class="service-content">
-                        <h3>Stylish Design</h3>
+                        <h3>Descargá información útil</h3>
 
                         <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
                         </p>
@@ -194,7 +192,7 @@
                         <span class="icon"><i class="icon-file"></i></span>
 
                     <div class="service-content">
-                        <h3>Clean Code</h3>
+                        <h3>Realizá una contribución</h3>
 
                         <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
                         </p>
@@ -284,81 +282,13 @@
     </section> <!-- end about -->
 
 
-    <!-- pricing
-    ================================================== -->
-    <section id="pricing">
-        <div class="row pricing-content">
-
-            <div class="col-four pricing-intro">
-                <h1 class="intro-header" data-aos="fade-up">Our Pricing Options</h1>
-
-                <p data-aos="fade-up">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.
-                </p>
-            </div>
-
-            <div class="col-eight pricing-table">
-                <div class="row">
-
-                    <div class="col-six plan-wrap">
-                        <div class="plan-block" data-aos="fade-up">
-
-                            <div class="plan-top-part">
-                                <h3 class="plan-block-title">Lite Plan</h3>
-                                <p class="plan-block-price"><sup>$</sup>25</p>
-                                <p class="plan-block-per">Per Month</p>
-                            </div>
-
-                            <div class="plan-bottom-part">
-                                <ul class="plan-block-features">
-                                    <li><span>3GB</span> Storage</li>
-                                    <li><span>10GB</span> Bandwidth</li>
-                                    <li><span>5</span> Databases</li>
-                                    <li><span>30</span> Email Accounts</li>
-                                </ul>
-
-                                <a class="button button-primary large" href="">Get Started</a>
-                            </div>
-
-                        </div>
-                    </div> <!-- end plan-wrap -->
-
-                    <div class="col-six plan-wrap">
-                        <div class="plan-block primary" data-aos="fade-up">
-
-                            <div class="plan-top-part">
-                                <h3 class="plan-block-title">Pro Plan</h3>
-                                <p class="plan-block-price"><sup>$</sup>50</p>
-                                <p class="plan-block-per">Per Month</p>
-                            </div>
-
-                            <div class="plan-bottom-part">
-                                <ul class="plan-block-features">
-                                    <li><span>5GB</span> Storage</li>
-                                    <li><span>20GB</span> Bandwidth</li>
-                                    <li><span>15</span> Databases</li>
-                                    <li><span>70</span> Email Accounts</li>
-                                </ul>
-
-                                <a class="button button-primary large" href="">Get Started</a>
-                            </div>
-
-                        </div>
-                    </div> <!-- end plan-wrap -->
-
-                </div>
-            </div> <!-- end pricing-table -->
-
-        </div> <!-- end pricing-content -->
-    </section> <!-- end pricing -->
-
-
     <!-- Testimonials Section
     ================================================== -->
     <section id="testimonials">
 
         <div class="row">
             <div class="col-twelve">
-                <h1 class="intro-header" data-aos="fade-up">What They Say About Our App.</h1>
+                <h1 class="intro-header" data-aos="fade-up">Nuestro equipo</h1>
             </div>
         </div>
 
@@ -415,15 +345,14 @@
 
         <div class="row">
             <div class="col-full">
-                <h1 class="intro-header"  data-aos="fade-up">Download Our App Today!</h1>
+                <h1 class="intro-header"  data-aos="fade-up">Descarga la aplicación ahora!</h1>
 
                 <p class="lead" data-aos="fade-up">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
                 </p>
 
                 <ul class="download-badges">
-                    <li><a href="#" title="" class="badge-appstore"  data-aos="fade-up">App Store</a></li>
-                    <li><a href="#" title="" class="badge-googleplay" data-aos="fade-up">Play Store</a></li>
+                    <li><a href="#" title="" class="badge-googleplay" data-aos="fade-up">Google Play</a></li>
                 </ul>
 
             </div>
@@ -449,19 +378,16 @@
 
                     <ul class="footer-social-list">
                         <li>
-                            <a href="#"><i class="fa fa-facebook-square"></i></a>
+                            <a href="https://www.facebook.com/matanzabomberos/" target="_blank"><i class="fa fa-facebook-square"></i></a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
+                            <a href="https://twitter.com/bomberosmatanza" target="_blank"><i class="fa fa-twitter"></i></a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-behance"></i></a>
+                            <a href="https://www.instagram.com/bomberosdematanza/" target="_blank"><i class="fa fa-instagram"></i></a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-dribbble"></i></a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fa fa-instagram"></i></a>
+                            <a href="https://www.youtube.com/channel/UCrXIXHjSWW4nMC6GA2YO2yA" target="_blank"><i class="fa fa-youtube-play"></i></a>
                         </li>
                     </ul>
 
@@ -470,7 +396,7 @@
 
                 <div class="col-three md-1-3 tab-1-2 mob-full footer-contact">
 
-                    <h4>Contact</h4>
+                    <h4>Contacto</h4>
 
                     <p>
                     1600 Amphitheatre Parkway<br>
@@ -488,15 +414,14 @@
 
                 <div class="col-two md-1-3 tab-1-2 mob-full footer-site-links">
 
-                    <h4>Site Links</h4>
+                    <h4>Páginas</h4>
 
                     <ul class="list-links">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="#">Blog</a></li>
-                        <li><a href="#">FAQ</a></li>
-                        <li><a href="#">Terms</a></li>
-                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="#">Inicio</a></li>
+                        <li><a href="#">Acerca de</a></li>
+                        <li><a href="#">Galeria</a></li>
+                        <li><a href="#">Equipo</a></li>
+                        <li><a href="#">Descarga</a></li>
                     </ul>
 
                 </div> <!-- end footer-site-links -->
@@ -511,7 +436,7 @@
 
                         <form id="mc-form" class="group" novalidate="true">
 
-                            <input type="email" value="" name="EMAIL" class="email" id="mc-email" placeholder="Email Address" required="">
+                            <input type="email" value="" name="EMAIL" class="email" id="mc-email" placeholder="Email" required="">
 
                             <input type="submit" name="subscribe" value="Send">
 
@@ -532,10 +457,6 @@
       	<div class="row">
 
       		<div class="col-twelve">
-	      		<div class="copyright">
-		         	<span>© Copyright Dazzle 2018.</span>
-		         	<span>Design by <a href="http://www.styleshout.com/">styleshout</a></span>
-		         </div>
 
 		         <div id="go-top">
 		            <a class="smoothscroll" title="Back to Top" href="#top"><i class="icon-arrow-up"></i></a>
