--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 
    <!-- home
    ================================================== -->
-   <!-- <section id="home" data-parallax="scroll" data-image-src="images/camion.png" data-natural-width=3000 data-natural-height=2000> -->
-   <section id="home" >
+   <section id="home" data-parallax="scroll" data-image-src="images/fondo.png" data-natural-width=3000 data-natural-height=2000>
+   <!-- <section id="home" > -->
         <div class="home-content">
 
             <div class="row contents">
@@ -421,6 +421,7 @@
           centerMode: true,
           centerPadding: '60px',
           slidesToShow: 3,
+          adaptiveHeight: true,
           // the magic
           responsive: [{
             breakpoint: 1980,
