--- a/index.html
+++ b/index.html
@@ -233,47 +233,40 @@
         <div class="row owl-wrap">
 
             <div id="testimonial-slider"  data-aos="fade-up">
-
               <div class="testimonial-author">
-                  <img src="images/avatars/user-01.jpg" alt="Author image">
+                  <img src="images/avatars/matias.png" alt="Author image">
                   <div class="author-info">
-                      John Doe
-                      <span>CEO, ABC Corp.</span>
+                      Matias Ascheri
                   </div>
               </div>
               <div class="testimonial-author">
-                  <img src="images/avatars/user-02.jpg" alt="Author image">
+                  <img src="images/avatars/jonathan.png" alt="Author image">
                   <div class="author-info">
-                      John Doe
-                      <span>CEO, ABC Corp.</span>
+                      Jonathan Fuentes
                   </div>
               </div>
               <div class="testimonial-author">
-                  <img src="images/avatars/user-03.jpg" alt="Author image">
+                  <img src="images/avatars/gonzalo.png" alt="Author image">
                   <div class="author-info">
-                      John Doe
-                      <span>CEO, ABC Corp.</span>
+                      Gonzalo Carrera
                   </div>
               </div>
               <div class="testimonial-author">
-                  <img src="images/avatars/user-04.jpg" alt="Author image">
+                  <img src="images/avatars/serena.png" alt="Author image">
                   <div class="author-info">
-                      John Doe
-                      <span>CEO, ABC Corp.</span>
+                      Serena Donato
                   </div>
               </div>
               <div class="testimonial-author">
-                  <img src="images/avatars/user-05.jpg" alt="Author image">
+                  <img src="images/avatars/alexander.png" alt="Author image">
                   <div class="author-info">
-                      John Doe
-                      <span>CEO, ABC Corp.</span>
+                      Alexander Prada
                   </div>
               </div>
               <div class="testimonial-author">
-                  <img src="images/avatars/user-01.jpg" alt="Author image">
+                  <img src="images/avatars/alejo.png" alt="Author image">
                   <div class="author-info">
-                      John Doe
-                      <span>CEO, ABC Corp.</span>
+                      Alejo Zonta
                   </div>
               </div>
 
@@ -282,6 +275,38 @@
         </div> <!-- end flex-container -->
 
     </section> <!-- end testimonials -->
+
+    <section id="contact">
+
+      <div class="row">
+          <div class="col-twelve">
+              <h1 class="intro-header" data-aos="fade-up">Contáctanos</h1>
+          </div>
+
+          <div class="col-twelve">
+            <form>
+              <div>
+                  <label for="emailInput">Un correo para que podamos contactarte</label>
+                  <input class="full-width" type="email" placeholder="Email" id="emailInput">
+              </div>
+
+              <div>
+                  <label for="nameInput">¿Cómo te llamas?</label>
+                  <input class="full-width" type="text" placeholder="Nombre" id="nameInput">
+              </div>
+
+              <label for="message">Dejanos tu mensaje</label>
+              <textarea class="full-width" placeholder="Mensaje" id="message"></textarea>
+
+              <input class="button-primary" type="submit" value="Enviar">
+
+            </form>
+          </div>
+      </div>
+
+     <br><br>
+
+    </section> <!-- end contact -->
 
 
     <!-- download
@@ -304,17 +329,6 @@
         </div>
 
     </section> <!-- end download -->
-
-    <section id="contact">
-
-      <div class="row">
-          <div class="col-twelve">
-              <h1 class="intro-header" data-aos="fade-up">Contactanos</h1>
-          </div>
-      </div>
-
-    </section> <!-- end download -->
-
 
     <!-- footer
     ================================================== -->
