--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                 <h1 class="intro-header"  data-aos="fade-up">Descarga la aplicación ahora!</h1>
 
                 <p class="lead" data-aos="fade-up">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+                  La aplicación ahora se encuentra disponible para su descarga en Google Play
                 </p>
 
                 <ul class="download-badges">
