Agrego botón de Contáctanos

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
   				<li><a class="smoothscroll"  href="#team" title="team">Equipo</a></li>
   				<li><a class="smoothscroll"  href="#download" title="download">Descarga</a></li>
   			</ul>
+        <a href="#contact" title="contact" class="button button-primary cta">Contáctanos</a>
 		  </nav>
 	    <a class="header-menu-toggle" href="#"><span>Menu</span></a>
    </header> <!-- /header -->
