--- a/index.html
+++ b/index.html
@@ -431,28 +431,21 @@
       $(document).ready(function(){
         $('.app-slider-container').slick({
           infinite: true,
-          // autoplay: true,
-          // autoplaySpeed: 3000,
-          centerMode: true,
-          centerPadding: '60px',
+          autoplay: true,
+          autoplaySpeed: 3000,
           slidesToShow: 3,
           adaptiveHeight: true,
-          // the magic
           responsive: [{
             breakpoint: 1980,
             settings: {
               slidesToShow: 3,
               infinite: true,
-              centerMode: true,
-              centerPadding: '60px'
             }
           }, {
             breakpoint: 1024,
             settings: {
               slidesToShow: 2,
               infinite: true,
-              centerMode: true,
-              centerPadding: '40px'
             }
           }, {
             breakpoint: 600,
@@ -460,9 +453,6 @@
               slidesToShow: 1,
               dots: true
             }
-          }, {
-            breakpoint: 300,
-            settings: "unslick" // destroys slick
           }]
         })
       });
