--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/vendor.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="font-awesome/css/all.css">
 
     <!-- script
    ================================================== -->
@@ -95,16 +96,16 @@
 
         <ul class="home-social-list">
             <li>
-                <a href="https://www.facebook.com/matanzabomberos/" target="_blank"><i class="fa fa-facebook-square"></i></a>
+                <a href="https://www.facebook.com/matanzabomberos/" target="_blank"><i class="fab fa-facebook-square"></i></a>
             </li>
             <li>
-                <a href="https://twitter.com/bomberosmatanza" target="_blank"><i class="fa fa-twitter"></i></a>
+                <a href="https://twitter.com/bomberosmatanza" target="_blank"><i class="fab fa-twitter"></i></a>
             </li>
             <li>
-                <a href="https://www.instagram.com/bomberosdematanza/" target="_blank"><i class="fa fa-instagram"></i></a>
+                <a href="https://www.instagram.com/bomberosdematanza/" target="_blank"><i class="fab fa-instagram"></i></a>
             </li>
             <li>
-                <a href="https://www.youtube.com/channel/UCrXIXHjSWW4nMC6GA2YO2yA" target="_blank"><i class="fa fa-youtube-play"></i></a>
+                <a href="https://www.youtube.com/channel/UCrXIXHjSWW4nMC6GA2YO2yA" target="_blank"><i class="fab fa-youtube"></i></a>
             </li>
         </ul>
         <!-- end home-social-list -->
@@ -138,7 +139,7 @@
             <div class="features-list block-1-2 block-m-1-2 block-mob-full group">
 
                 <div class="bgrid feature" data-aos="fade-up">
-                    <span class="icon"><i class="fa fa-phone"></i></span>
+                    <span class="icon"><i class="fas fa-phone"></i></span>
                     <div class="service-content">
                       <h3>Reportá tu emergencia</h3>
                       <p>
@@ -148,7 +149,7 @@
                 </div> <!-- /bgrid -->
 
                 <div class="bgrid feature" data-aos="fade-up">
-                    <span class="icon"><i class="fa fa-newspaper-o"></i></span>
+                    <span class="icon"><i class="fas fa-newspaper-o"></i></span>
                     <div class="service-content">
                       <h3>Mirá las ultimas noticias</h3>
                       <p>
@@ -158,7 +159,7 @@
                 </div> <!-- /bgrid -->
 
                 <div class="bgrid feature" data-aos="fade-up">
-                    <span class="icon"><i class="icon-file"></i></span>
+                    <span class="icon"><i class="fas fa-file-alt"></i></span>
                     <div class="service-content">
                         <h3>Descargá información útil</h3>
                         <p>
@@ -168,7 +169,7 @@
                 </div> <!-- /bgrid -->
 
                 <div class="bgrid feature" data-aos="fade-up">
-                    <span class="icon"><i class="icon-file"></i></span>
+                    <span class="icon"><i class="fas fa-hand-holding-heart"></i></span>
                     <div class="service-content">
                         <h3>Realizá una contribución</h3>
                         <p>
@@ -348,16 +349,16 @@
 
                     <ul class="footer-social-list">
                         <li>
-                            <a href="https://www.facebook.com/matanzabomberos/" target="_blank"><i class="fa fa-facebook-square"></i></a>
+                            <a href="https://www.facebook.com/matanzabomberos/" target="_blank"><i class="fab fa-facebook-square"></i></a>
                         </li>
                         <li>
-                            <a href="https://twitter.com/bomberosmatanza" target="_blank"><i class="fa fa-twitter"></i></a>
+                            <a href="https://twitter.com/bomberosmatanza" target="_blank"><i class="fab fa-twitter"></i></a>
                         </li>
                         <li>
-                            <a href="https://www.instagram.com/bomberosdematanza/" target="_blank"><i class="fa fa-instagram"></i></a>
+                            <a href="https://www.instagram.com/bomberosdematanza/" target="_blank"><i class="fab fa-instagram"></i></a>
                         </li>
                         <li>
-                            <a href="https://www.youtube.com/channel/UCrXIXHjSWW4nMC6GA2YO2yA" target="_blank"><i class="fa fa-youtube-play"></i></a>
+                            <a href="https://www.youtube.com/channel/UCrXIXHjSWW4nMC6GA2YO2yA" target="_blank"><i class="fab fa-youtube"></i></a>
                         </li>
                     </ul>
 
