--- a/index.html
+++ b/index.html
@@ -40,28 +40,27 @@
 
     <!-- header
    ================================================== -->
+   <header id="header" class="row">
+      <div class="header-logo">
+        <a href="index.html">BVM</a>
+      </div>
 
-    <header id="header" class="row">
-        <div class="header-logo">
-            <a href="index.html">BVM</a>
-        </div>
-
-        <nav id="header-nav-wrap">
-            <ul class="header-main-nav">
-                <li class="current"><a class="smoothscroll" href="#home" title="home">Inicio</a></li>
-                <li><a class="smoothscroll" href="#about" title="about">Acerca de</a></li>
-                <li><a class="smoothscroll" href="#gallery" title="gallery">Galería</a></li>
-                <li><a class="smoothscroll" href="#team" title="team">Equipo</a></li>
-                <li><a class="smoothscroll" href="#download" title="download">Descarga</a></li>
-            </ul>
-            <a href="#contact" title="contact" class="button button-primary cta">Contáctanos</a>
-        </nav>
-        <a class="header-menu-toggle" href="#"><span>Menu</span></a>
-    </header>
-    <!-- /header -->
+	   	<nav id="header-nav-wrap">
+  			<ul class="header-main-nav">
+  				<li class="current"><a class="smoothscroll"  href="#home" title="home">Inicio</a></li>
+          <li><a class="smoothscroll"  href="#about" title="about">Acerca de</a></li>
+  				<li><a class="smoothscroll"  href="#gallery" title="gallery">Galería</a></li>
+  				<li><a class="smoothscroll"  href="#dashboard" title="dashboard">Administración</a></li>
+  				<li><a class="smoothscroll"  href="#team" title="team">Equipo</a></li>
+  				<li><a class="smoothscroll"  href="#download" title="download">Descarga</a></li>
+  			</ul>
+        <a href="#contact" title="contact" class="button button-primary cta smoothscroll">Contáctanos</a>
+		  </nav>
+	    <a class="header-menu-toggle" href="#"><span>Menu</span></a>
+   </header> <!-- /header -->
 
 
-    <!-- home
+   <!-- home
    ================================================== -->
     <section id="home" data-parallax="scroll" data-image-src="images/fondo.png" data-natural-width=3000 data-natural-height=2000>
         <!-- <section id="home" > -->
@@ -195,13 +194,34 @@
     <!-- end about -->
 
     <section id="gallery">
-        <br>
-        <br>
-        <div class="row about-intro">
-            <div class="col-four">
-                <h1 class="intro-header title-gallery" data-aos="fade-up">¡Mirá la App!</h1>
-            </div>
+      <br>
+      <br>
+      <br>
+      <div class="row about-intro">
+          <div class="col-four">
+              <h1 class="intro-header title-gallery" data-aos="fade-up">¡Mirá la App!</h1>
+          </div>
 
+      </div>
+
+      <div class="app-slider-container">
+        <div>
+          <img src="images/1.png" alt="">
+        </div>
+        <div>
+          <img src="images/2.png" alt="">
+        </div>
+        <div>
+          <img src="images/3.png" alt="">
+        </div>
+        <div>
+          <img src="images/4.png" alt="">
+        </div>
+        <div>
+          <img src="images/5.png" alt="">
+        </div>
+        <div>
+          <img src="images/6.png" alt="">
         </div>
 
         <div class="app-slider-container">
@@ -230,6 +250,58 @@
         <br>
         <br>
     </section>
+
+    <section id="dashboard">
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <div class="row about-intro">
+            <div class="col-four">
+              <h1 class="intro-header" data-aos="fade-up">Web de Administración</h1>
+            </div>
+
+            <div class="col-eight">
+              <p class="lead" data-aos="fade-up">
+                Los Bomberos contarán con una web, en la que podrán visualizar y administrar los siniestros reportados desde la aplicación. Asimismo podrán administrar el contenido de la aplicación como las noticias, documentos, donaciones, además de contar con una herramienta de control de usuarios.
+              </p>
+            </div>
+        </div>
+
+        <div class="row about-features">
+
+            <div class="features-list block-1-2 block-m-1-2 block-mob-full group">
+
+              <div class="tab-full">
+                <p><img src="images/mockup.png"></p>
+              </div>
+
+            </div> <!-- end features-list -->
+
+            <div class="row narrow add-bottom text-center">
+        	   <div class="col-twelve tab-full">
+      		      <h1>Siniestros en tiempo real</h1>
+    			      <p class="lead">
+                  Los Bomberos podrán ver en tiempo real todos los reportes de emergencias que se realicen desde la aplicación. Contarán con un sistema de notificaciones web y de alertas por sonido para que no se pierdan ningún reporte.
+                </p>
+             </div>
+          	</div>
+
+            <div class="row narrow add-bottom text-center">
+        	   <div class="col-twelve tab-full">
+      		      <h1>Administración de usuarios</h1>
+    			      <p class="lead">
+                  La web de administración cuenta con una sección donde los Bomberos podrán administrar a los usuarios registrados, donde podrán verificar a los nuevos ingresantes y bloquear usuarios, todo esto con el objetivo de evitar que se realicen falsas denuncias al departamento de Bomberos.
+                </p>
+             </div>
+          	</div>
+
+        </div> <!-- end about-features -->
+        <hr/>
+
+    </section> <!-- end about -->
 
 
     <!-- Testimonials Section
@@ -292,11 +364,14 @@
     <!-- end testimonials -->
 
     <section id="contact">
-
-        <div class="row">
-            <div class="col-twelve">
-                <h1 class="intro-header" data-aos="fade-up">Contáctanos</h1>
-            </div>
+      <br>
+      <br>
+      <br>
+      <br>
+      <div class="row">
+          <div class="col-twelve">
+              <h1 class="intro-header" data-aos="fade-up">Contáctanos</h1>
+          </div>
 
             <div class="col-twelve">
                 <form>
@@ -404,6 +479,7 @@
                         <li><a class="smoothscroll" href="#">Inicio</a></li>
                         <li><a class="smoothscroll" href="#about">Acerca de</a></li>
                         <li><a class="smoothscroll" href="#gallery">Galeria</a></li>
+                        <li><a class="smoothscroll" href="#dashboard">Administración</a></li>
                         <li><a class="smoothscroll" href="#team">Equipo</a></li>
                         <li><a class="smoothscroll" href="#download">Descarga</a></li>
                     </ul>
