--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
                 <h1 class="intro-header" data-aos="fade-up">Descargá la Aplicación ¡Ahora!</h1>
 
                 <p class="lead" data-aos="fade-up">
-                    La aplicación ya se encuentra disponible en Play Store. Descargala, es pública y gratuita.
+                    La aplicación ya se encuentra disponible en Play Store. Es pública y gratuita.
                 </p>
 
                 <ul class="download-badges">
@@ -428,14 +428,36 @@
 
         <div class="footer-main">
             <div class="row">
+                <!-- end footer-info -->
 
-                <div class="col-three md-1-3 tab-full footer-info">
+                <div class="col-three md-1-3 tab-full footer-contact">
+
+                    <h4>Contacto</h4>
+
+                    <p>
+                        Suipacha 100<br> Ramos Mejia / CP 1704<br> Buenos Aires - Argentina<br>
+                    </p>
+
+                    <p>
+                        info@bomberosvoluntariosdematanza.org <br> Teléfono: (+54) 9 11 658-1170/6824 <br>
+                    </p>
+
+                </div>
+                <!-- end footer-contact -->
+
+                <div class="col-six md-1-3 tab-full footer-info">
 
                     <div class="footer-logo"></div>
 
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque in ipsum id orci porta dapibus. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus.
-                    </p>
+                    <iframe
+                      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3282.3194565583053!2d-58.56358728416282!3d-34.64663436727834!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc7e71d663309%3A0x890490133f5fb570!2sSuipacha%20100%2C%20B1704FHB%20Ramos%20Mej%C3%ADa%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1635308709971!5m2!1ses-419!2sar"
+                      width="400"
+                      height="250"
+                      style="border:0;"
+                      allowfullscreen=""
+                      loading="lazy"
+                      class="footer-map"
+                    ></iframe>
 
                     <ul class="footer-social-list">
                         <li>
@@ -454,24 +476,8 @@
 
 
                 </div>
-                <!-- end footer-info -->
 
-                <div class="col-five md-1-2 tab-1-2 mob-full footer-contact">
-
-                    <h4>Contacto</h4>
-
-                    <p>
-                        Suipacha 100<br> Ramos Mejia / CP 1704<br> Buenos Aires - Argentina<br>
-                    </p>
-
-                    <p>
-                        info@bomberosvoluntariosdematanza.org <br> Teléfono: (+54) 9 11 658-1170/6824 <br>
-                    </p>
-
-                </div>
-                <!-- end footer-contact -->
-
-                <div class="col-two md-1-3 tab-1-2 mob-full footer-site-links">
+                <div class="col-three md-1-3 tab-full footer-site-links">
 
                     <h4>Páginas</h4>
 
