--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                         <a href="#download" class="smoothscroll button stroke">
                             <span class="icon-circle-down" aria-hidden="true"></span> Descargar
                         </a>
-                        <a href="http://player.vimeo.com/video/14592941?title=0&amp;byline=0&amp;portrait=0&amp;color=39b54a" data-lity class="button stroke">
+                        <a href="https://www.youtube.com/embed/csfZBti-J_A" data-lity class="button stroke">
                             <span class="icon-play" aria-hidden="true"></span> Ver Video
                         </a>
                     </div>
@@ -393,7 +393,7 @@
                 </p>
 
                 <ul class="download-badges">
-                    <li><a href="https://play.google.com/store?hl=es_AR&gl=US" title="" class="badge-googleplay" data-aos="fade-up">Google Play Store</a></li>
+                    <li><a href="https://play.google.com/store?hl=es_AR&gl=US" target="_blank" title="" class="badge-googleplay" data-aos="fade-up">Google Play Store</a></li>
                 </ul>
 
             </div>
@@ -459,7 +459,7 @@
 
                 <div class="col-three md-1-3 tab-full footer-site-links">
 
-                    <h4>Páginas</h4>
+                    <h4>Secciones</h4>
 
                     <ul class="list-links">
                         <li><a class="smoothscroll" href="#">Inicio</a></li>
